<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Television">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/txtVTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/headervid"
            android:textSize="30sp"
            android:layout_margin="20dp"
            tools:ignore="MissingConstraints" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
            android:id="@+id/btnTV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/vid1"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnTV2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/vid2"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnTV3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/vid3"
            style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>

        <VideoView
            android:id="@+id/vistaVideo"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_gravity="center"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:text="@string/reproducir"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnPausa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="2"
                android:text="@string/pausa"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>