<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ubicacion_Real">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GPS" />

    <Button
        android:id="@+id/btnGSatelite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/satelite"
        />

    <Button
        android:id="@+id/btnGHibrido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hibrido"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/btnGUbi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/miubi" />


</RelativeLayout>

